# casper-node-launcher

./: .drone.yml  CHANGELOG.md  Cargo.toml  DOCKER_README.md  Dockerfile  Makefile  README.md  bors.toml  rust-toolchain.toml  upload_to_bintray.sh
.github/: casper-node-launcher-pr.yml  casper-node-launcher-publish.yml
.github/workflows/: casper-node-launcher-pr.yml  casper-node-launcher-publish.yml  ci-casper-node-launcher.yml  ci.yml  publish-casper-node-launcher-deb.yml  publish-casper-node-launcher-rpm.yml
.rpm/: casper-node-launcher.spec
ci/: build_docker.sh  publish_deb_to_repo.sh  publish_rpm_to_repo.sh  push_docker.sh  rpmmacros
resources/: BIN_README.md  DEB_README.md  ETC_README.md  VALIDATOR_KEYS_README.md
resources/casper_node_launcher/: casper-node-launcher.service
resources/maintainer_scripts/: config_from_example.sh  delete_local_db.sh  node_util.py  protocol_upgrade.sh  pull_casper_node_version.conf  pull_casper_node_version.sh
resources/maintainer_scripts/casper_node_launcher/: casper-node-launcher.service
resources/maintainer_scripts/debian/: postinst  preinst
resources/maintainer_scripts/logrotate.d/: casper-node
resources/maintainer_scripts/network_configs/: README.md  casper-test.conf  casper.conf
src/: config.rs  launcher.rs  logging.rs  main.rs  utils.rs
test_resources/: casper-node.in  downgrade.in  downgrade.sh  shutdown.in  shutdown.sh
