[package]
name = "casper-node-launcher"
version = "0.4.0"
authors = ["Fraser Hutchison <fraser@casperlabs.io>", "Joe Sacher <joe@casperlabs.io>"]
edition = "2018"
description = "A binary which runs and upgrades the casper-node of the Casper network"
readme = "README.md"
documentation = "https://docs.rs/casper-node-launcher"
homepage = "https://casper.network"
repository = "https://github.com/CasperLabs/casper-node/tree/master/client"
license-file = "./LICENSE"

[dependencies]
anyhow = "1.0.38"
backtrace = "0.3.56"
clap = "3.0.0-beta.2"
once_cell = "1.5.2"
nix = "0.19.1"
semver = { version = "0.11.0", features = ["serde"] }
serde = { version = "1.0.120", features = ["derive"] }
signal-hook = "0.3.4"
toml = "0.5.8"
tracing = "0.1.22"
tracing-subscriber = { version = "0.2.15", features = ["json"] }

[dev-dependencies]
once_cell = "1.5.2"
rand_core = "0.6.2"
tempfile = "3.2.0"

[package.metadata.deb]
depends = "curl"
revision = "0"
assets = [
    ["./target/release/casper-node-launcher", "/usr/bin/casper-node-launcher", "755"],
    ["./resources/BIN_README.md", "/var/lib/casper/bin/README.md", "755"],
    ["./resources/maintainer_scripts/logrotate.d/casper-node", "/etc/logrotate.d/casper-node", "644"],
    ["./resources/PLATFORM_DEB", "/etc/casper/PLATFORM", "644"],
    ["./resources/maintainer_scripts/pull_casper_node_version.sh", "/etc/casper/pull_casper_node_version.sh", "755"],
    ["./resources/maintainer_scripts/network_configs/*", "/etc/casper/network_configs/", "644"],
    ["./resources/maintainer_scripts/delete_local_db.sh", "/etc/casper/delete_local_db.sh", "755"],
    ["./resources/maintainer_scripts/config_from_example.sh", "/etc/casper/config_from_example.sh", "755"],
    ["./resources/maintainer_scripts/node_util.py", "/etc/casper/node_util.py", "755"],
    ["./resources/ETC_README.md", "/etc/casper/README.md", "644"],
    ["./resources/VALIDATOR_KEYS_README.md", "/etc/casper/validator_keys/README.md", "644"]
]
maintainer-scripts = "./resources/maintainer_scripts/debian"
extended-description = """
Package for Casper Node Launcher

For information on using package, see https://github.com/CasperLabs/casper-node-launcher
"""

[package.metadata.deb.systemd-units]
unit-scripts = "./resources/maintainer_scripts/casper_node_launcher"
restart-after-upgrade = false

[package.metadata.rpm]
package = "casper-node-launcher"

[package.metadata.rpm.cargo]
buildflags = ["--release"]

[package.metadata.rpm.systemd-units]
unit-scripts = "./resources/maintainer_scripts/casper_node_launcher"
restart-after-upgrade = false

[package.metadata.rpm.targets]
casper-node-launcher = { path = "/usr/bin/casper-node-launcher" }
"../../resources/BIN_README.md" = {path = "/var/lib/casper/bin/README.md"}
"../../resources/PLATFORM_RPM" = {path = "/etc/casper/PLATFORM"}
"../../resources/maintainer_scripts/logrotate.d/casper-node" = {path = "/etc/logrotate.d/casper-node"}
"../../resources/maintainer_scripts/pull_casper_node_version.sh" = {path = "/etc/casper/pull_casper_node_version.sh"}
"../../resources/maintainer_scripts/network_configs/casper.conf" = {path = "/etc/casper/network_configs/casper.conf"}
"../../resources/maintainer_scripts/network_configs/casper-test.conf" = {path = "/etc/casper/network_configs/casper-test.conf"}
"../../resources/maintainer_scripts/delete_local_db.sh" = {path = "/etc/casper/delete_local_db.sh"}
"../../resources/maintainer_scripts/config_from_example.sh" = {path = "/etc/casper/config_from_example.sh"}
"../../resources/maintainer_scripts/node_util.py" = {path = "/etc/casper/node_util.py"}
"../../resources/ETC_README.md" = {path = "/etc/casper/README.md"}
"../../resources/VALIDATOR_KEYS_README.md" = {path = "/etc/casper/validator_keys/README.md"}
"../../resources/maintainer_scripts/casper_node_launcher/casper-node-launcher.service" = {path = "/etc/systemd/system/casper-node-launcher.service"}
