[package]
name = "casper-node-launcher"
version = "1.0.0"
authors = ["Fraser Hutchison <fraser@casperlabs.io>", "Joe Sacher <joe@casperlabs.io>"]
edition = "2018"
description = "A binary which runs and upgrades the casper-node of the Casper network"
readme = "README.md"
documentation = "https://docs.rs/casper-node-launcher"
homepage = "https://casper.network"
repository = "https://github.com/CasperLabs/casper-node/tree/master/client"
license-file = "./LICENSE"

[dependencies]
anyhow = "1.0.38"
backtrace = "0.3.56"
clap = { version = "3.1.8", features = ["cargo"] }
once_cell = "1.5.2"
nix = "0.23.0"
semver = { version = "1.0.4", features = ["serde"] }
serde = { version = "1.0.120", features = ["derive"] }
signal-hook = "0.3.4"
toml = "0.5.8"
tracing = "0.1.22"
tracing-subscriber = { version = "0.3.2", features = ["json", "env-filter"] }

[dev-dependencies]
once_cell = "1.5.2"
rand_core = "0.6.2"
tempfile = "3.2.0"

[package.metadata.deb]
depends = "curl"
revision = "0"
assets = [
    ["./target/release/casper-node-launcher", "/usr/bin/casper-node-launcher", "755"],
    ["./resources/BIN_README.md", "/var/lib/casper/bin/README.md", "755"],
    ["./resources/maintainer_scripts/logrotate.d/casper-node", "/etc/logrotate.d/casper-node", "644"],
    ["./resources/PLATFORM_DEB", "/etc/casper/PLATFORM", "644"],
    ["./resources/maintainer_scripts/pull_casper_node_version.sh", "/etc/casper/pull_casper_node_version.sh", "755"],
    ["./resources/maintainer_scripts/network_configs/*", "/etc/casper/network_configs/", "644"],
    ["./resources/maintainer_scripts/config_from_example.sh", "/etc/casper/config_from_example.sh", "755"],
    ["./resources/maintainer_scripts/node_util.py", "/etc/casper/node_util.py", "755"],
    ["./resources/ETC_README.md", "/etc/casper/README.md", "644"],
    ["./resources/VALIDATOR_KEYS_README.md", "/etc/casper/validator_keys/README.md", "644"]
]
maintainer-scripts = "./resources/maintainer_scripts/debian"
extended-description = """
Package for Casper Node Launcher

For information on using package, see https://github.com/CasperLabs/casper-node-launcher
"""

[package.metadata.deb.systemd-units]
unit-scripts = "./resources/maintainer_scripts/casper_node_launcher"
restart-after-upgrade = false

[package.metadata.deb.variants.bionic]
name = "casper-node-launcher"
revision = "0+bionic"

[package.metadata.deb.variants.focal]
name = "casper-node-launcher"
revision = "0+focal"

[package.metadata.deb.variants.jammy]
name = "casper-node-launcher"
revision = "0+jammy"

[package.metadata.generate-rpm]
license = "Apache 2.0"
assets = [
    { source = "target/release/casper-node-launcher", dest = "/usr/bin/casper-node-launcher", mode = "0755" },
    { source = "resources/BIN_README.md", dest = "/var/lib/casper/bin/README.md", doc = true, mode = "0644" },
    { source = "resources/PLATFORM_RPM", dest = "/etc/casper/PLATFORM", doc = true, mode = "0644" },
    { source = "resources/maintainer_scripts/logrotate.d/casper-node", dest = "/etc/logrotate.d/casper-node", mode = "0644" },
    { source = "resources/maintainer_scripts/pull_casper_node_version.sh", dest = "/etc/casper/pull_casper_node_version.sh", mode = "0755" },
    { source = "resources/maintainer_scripts/network_configs/*", dest = "/etc/casper/network_configs/", mode = "0644" },
    { source = "resources/maintainer_scripts/config_from_example.sh", dest = "/etc/casper/config_from_example.sh", mode = "0755" },
    { source = "resources/maintainer_scripts/node_util.py", dest = "/etc/casper/node_util.py", mode = "0755" },
    { source = "resources/ETC_README.md", dest = "/etc/casper/README.md", doc = true, mode = "0644" },
    { source = "resources/VALIDATOR_KEYS_README.md", dest = "/etc/casper/validator_keys/README.md", doc = true, mode = "0644" },
    { source = "resources/maintainer_scripts/casper_node_launcher/casper-node-launcher.service", dest = "/lib/systemd/system/casper-node-launcher.service", mode = "0644" }
]
