[package]
name = "casper-node-launcher"
version = "1.0.5"
authors = ["Fraser Hutchison <fraser@casperlabs.io>", "Joe Sacher <joe.sacher@casper.network>"]
edition = "2018"
description = "A binary which runs and upgrades the casper-node of the Casper network"
readme = "README.md"
documentation = "https://docs.rs/casper-node-launcher"
homepage = "https://casper.network"
repository = "https://github.com/casper-network/casper-node-launcher"
license-file = "./LICENSE"

[dependencies]
anyhow = "1.0.38"
backtrace = "0.3.56"
clap = { version = "3.2.23", features = ["cargo"] }
once_cell = "1.5.2"
nix = "0.23.0"
semver = { version = "1.0.4", features = ["serde"] }
serde = { version = "1.0.120", features = ["derive"] }
signal-hook = "0.3.4"
toml = "0.5.8"
tracing = "0.1.22"
tracing-subscriber = { version = "0.3.17", features = ["json", "env-filter"] }

[dev-dependencies]
once_cell = "1.5.2"
tempfile = "3.6.0"

[package.metadata.deb]
name = "casper-node-launcher"
depends = "curl"
revision = "0"
assets = [
    ["./target/release/casper-node-launcher", "/usr/bin/casper-node-launcher", "755"],
    ["./resources/BIN_README.md", "/var/lib/casper/bin/README.md", "755"],
    ["./resources/maintainer_scripts/logrotate.d/casper-node", "/etc/logrotate.d/casper-node", "644"],
    ["./resources/maintainer_scripts/network_configs/*", "/etc/casper/network_configs/", "644"],
    ["./resources/maintainer_scripts/node_util.py", "/etc/casper/node_util.py", "755"],
    ["./resources/ETC_README.md", "/etc/casper/README.md", "644"],
    ["./resources/VALIDATOR_KEYS_README.md", "/etc/casper/validator_keys/README.md", "644"]
]
maintainer-scripts = "./resources/maintainer_scripts/debian"
extended-description = """
Package for Casper Node Launcher

For information on using package, see https://github.com/casper-network/casper-node-launcher
"""

[package.metadata.deb.variants.focal]

[package.metadata.deb.variants.jammy]

[package.metadata.deb.variants.noble]

[package.metadata.deb.systemd-units]
unit-name = "casper-node-launcher"
enable = true
unit-scripts = "resources/maintainer_scripts/casper_node_launcher"
start = false
restart-after-upgrade = true
stop-on-upgrade = false
